--- a/.github/workflows/dev-release-java-publish-sonatype.yml
+++ b/.github/workflows/dev-release-java-publish-sonatype.yml
@@ -1,8 +1,9 @@
-name: Build and publish dev-release Java distributions to sonatype.
+name: Build and publish dev-release Java distributions to sonatype & Python to PyPI.
 
 on: workflow_dispatch
 
 jobs:
+  # Java
   build:
     uses: th2-net/.github/.github/workflows/compound-java.yml@main
     with:
@@ -17,3 +18,18 @@ jobs:
       sonatypeSigningKey: ${{ secrets.SONATYPE_GPG_ARMORED_KEY }}
       sonatypeSigningPassword: ${{ secrets.SONATYPE_SIGNING_PASSWORD }}
       nvd-api-key: ${{ secrets.NVD_APIKEY }}
+  # Python
+  collect-version:
+    name: Get version from gradle.properties
+    uses: th2-net/.github/.github/workflows/compound-prebuild-java-dev-workflow.yml@main
+  build-n-publish:
+    name: Dev build and Python distributions to PyPI
+    needs: [collect-version]
+    uses: th2-net/.github/.github/workflows/compaund-python-grpc-pypi-publication.yml@main
+    with:
+      custom-version: ${{ needs.collect-version.outputs.versionNumber }}rc1
+    secrets:
+      pypi_password: ${{ secrets.PYPI_PASSWORD }}
+  scan:
+    name: Vulnerabilities scan
+    uses: th2-net/.github/.github/workflows/python-scan.yml@main
