--- a/.github/workflows/release-java-python-publish.yml
+++ b/.github/workflows/release-java-python-publish.yml
@@ -1,8 +1,9 @@
-name: Build and release Java distributions to sonatype.
+name: Build and release Java distributions to sonatype & Python to PyPI.
 
 on: workflow_dispatch
 
 jobs:
+  # Java
   build:
     uses: th2-net/.github/.github/workflows/compound-java.yml@main
     with:
@@ -17,3 +18,12 @@ jobs:
       sonatypeSigningKey: ${{ secrets.SONATYPE_GPG_ARMORED_KEY }}
       sonatypeSigningPassword: ${{ secrets.SONATYPE_SIGNING_PASSWORD }}
       nvd-api-key: ${{ secrets.NVD_APIKEY }}
+  # Python
+  build-n-publish:
+    name: Build and Python distributions to PyPI
+    uses: th2-net/.github/.github/workflows/compaund-python-grpc-pypi-publication.yml@main
+    secrets:
+      pypi_password: ${{ secrets.PYPI_PASSWORD }}
+  scan:
+    name: Vulnerabilities scan
+    uses: th2-net/.github/.github/workflows/python-scan.yml@main
