--- a/.github/workflows/snapshot-java-python-publish.yml
+++ b/.github/workflows/snapshot-java-python-publish.yml
@@ -1,4 +1,4 @@
-name: Dev build and publish Java distributions to sonatype snapshot repository & Python to
+name: Dev build and publish Java distributions to sonatype snapshot repository & Python to PyPI
 
 on:
   push:
@@ -9,9 +9,7 @@ on:
       - README.md
 
 jobs:
-  collect-version:
-    name: Get version from gradle.properties
-    uses: th2-net/.github/.github/workflows/compound-prebuild-java-dev-workflow.yml@main
+  # Java
   build-job:
     uses: th2-net/.github/.github/workflows/compound-java-dev.yml@main
     with:
@@ -24,6 +22,10 @@ jobs:
       sonatypeSigningKey: ${{ secrets.SONATYPE_GPG_ARMORED_KEY }}
       sonatypeSigningPassword: ${{ secrets.SONATYPE_SIGNING_PASSWORD }}
       nvd-api-key: ${{ secrets.NVD_APIKEY }}
+  # Python
+  collect-version:
+    name: Get version from gradle.properties
+    uses: th2-net/.github/.github/workflows/compound-prebuild-java-dev-workflow.yml@main
   build-n-publish:
     name: Dev build and Python distributions to PyPI
     needs: [collect-version]
