--- a/.github/workflows/snapshot-java-python-publish.yml
+++ b/.github/workflows/snapshot-java-python-publish.yml
@@ -15,7 +15,7 @@ jobs:
     uses: th2-net/.github/.github/workflows/compound-prebuild-java-dev-workflow.yml@main
   build-n-publish:
     name: Dev build and Python distributions to PyPI
-    needs: [collect-version]
+    needs: collect-version
     uses: th2-net/.github/.github/workflows/compaund-python-grpc-pypi-publication.yml@main
     with:
       custom-version: ${{ needs.collect-version.outputs.versionNumber }}.dev${{ github.run_id }}
@@ -27,6 +27,7 @@ jobs:
   # Java
   build-job:
     uses: th2-net/.github/.github/workflows/compound-java-dev.yml@main
+    needs: build-n-publish
     with:
       build-target: 'Sonatype'
       runsOn: ubuntu-latest
