--- a/.github/workflows/dev-release-java-publish-sonatype.yml
+++ b/.github/workflows/dev-release-java-publish-sonatype.yml
@@ -3,7 +3,7 @@ name: Build and publish dev-release Java distributions to sonatype & Python to P
 on: workflow_dispatch
 
 jobs:
-  # Python
+  # Python build and publish
   collect-version:
     name: Get version from gradle.properties
     uses: th2-net/.github/.github/workflows/compound-prebuild-java-dev-workflow.yml@main
@@ -18,8 +18,9 @@ jobs:
   scan:
     name: Vulnerabilities scan
     uses: th2-net/.github/.github/workflows/python-scan.yml@main
-  # Java
+  # Java build and publish
   build:
+    name: Build and publish dev-release Java distributions to sonatype
     uses: th2-net/.github/.github/workflows/compound-java.yml@main
     needs: build-n-publish
     with:
