th2-gradle-plugin:0.0.5 workflows

--- a/.github/workflows/dev-release-java-publish-sonatype.yml
+++ b/.github/workflows/dev-release-java-publish-sonatype.yml
@@ -16,7 +16,7 @@ jobs:
     secrets:
       pypi_password: ${{ secrets.PYPI_PASSWORD }}
   scan:
-    name: Vulnerabilities scan
+    name: Python vulnerabilities scan
     uses: th2-net/.github/.github/workflows/python-scan.yml@main
   # Java build and publish
   build:
