--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-release_version=1.2.0
+release_version=1.3.0
+version_suffix=
 description = 'th2 gRPC library for UI framework demo'
-
 vcs_url=https://github.com/th2-net/th2-grpc-act-uiframework-win-demo
